fix user select bug on firefox

--- a/src/components/EmailForm/index.css
+++ b/src/components/EmailForm/index.css
@@ -44,6 +44,7 @@
   border: none;
   cursor: text;
   width: 100%;
+  user-select: text;
 }
 
 .dark-contact-input {
